@@ -3,13 +3,12 @@ package org.example.exc1;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class Sorter {
 
 
     public List<String> sortString(List<String> toSort) {
-        return toSort.stream().sorted(Comparator.reverseOrder()).collect(Collectors.toList());
+        return toSort.stream().sorted(Comparator.reverseOrder()).toList();
     }
 
 }
